06/04
	* Updated 11.2 gun prices [Playtester]
	- also updated sql files
06/01
	* Merged random item fixes [Playtester]
	- updated sql files
05/26
	* Merged mob_db and mob_skill_db [Playtester]
	- fixed mob name Atros -> Atroce
	- small fixes on Thor Volcano mob skills
05/22
	* Merged item_db, mob_db, mob_skill_db [Playtester]
	- various item fixes
	- added mostly safe to use Thor Volcano mobs & skills
	- currently they only have their 11.2 drops
05/20
	* Set Chase Walk's cast time to 1200ms [ultramage]
05/12
	* Updated Magmaring [Playtester]
05/06
	* Merged item_db, item_violetbox, mob_db, mob_skill_db and skill_db [Playtester]
	- also updated mob summoning files
	- added Red Pouch thanks to Spre
	- updated and added various items thanks to L0ne_W0lf
	- fixed Assassin Mask ID in OVB
	- updated Magmaring and MVPs
	- reverted Kyrie Eleison until code gets merged
04/30
	* Updated mob skills [Playtester]
	- gave most mobs their MVP level skills
	- other small skill updates
	- also fixed format of some files
04/28
	* Merged item_db, item_misc, mob_db, mob_skill_db, skill_cast_db [Playtester]
	- fixed Wild Ginseng card
	- raised Anubis's DEF
	- changed attackpcgt to attackpcge
	- some minor mob skill updates
	- chase walk now has a cast time of 1 second
04/26
	* Merged const, item_db, mob_db, mob_skill_db and pet_db [Playtester]
04/24
	* Merged corrected packet_db.txt [ultramage]
04/23
	* Merged skill_db (splash ranges for high level mob skills).
04/19
	* Merged inf2&0x1000 update where it means "do not cast on enemies".
	* Merged most of the mob_db (mob skills have a range of 9)
	* Merged correct duration of Land Protector. [Skotlex]
04/13
	* Merged mob_skill_db [Playtester]
	- fixed mobs not using their idle attack skills
	- mobs now use Ganbantein on randomtarget
	* Merged item_db, item_trade and mob_db [Playtester]
	- updated various etc items
	- added Kiel Hyre quest items to item_trade
	- added Magmaring
	- updated sql files