@@ -1,3 +1,9 @@
+06/09
+	* Merged item_db and mob_db [Playtester]
+	- minor item fixes
+	- some official Anubis stats
+	- some official Thor Volcano mob stats
+	- updated sql files
 06/04
 	* Updated 11.2 gun prices [Playtester]
 	- also updated sql files
